# deep-learning-notebooks

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
notebooks/: Lersson 03a - gradient descent .ipynb
